--- a/index.html
+++ b/index.html
@@ -7,10 +7,28 @@
     <link rel="stylesheet" href="styles/index.css" />
   </head>
   <body class="work-sans-font">
-    <header>
-      <nav class="navbar">
+    <header class="bg-light">
+      <nav class="navbar display-flex">
         <h3 class="brand">G3 Architects</h3>
+        <ul class="nav-links display-flex">
+          <li class="nav-item"><a href="" class="nav-link">Home</a></li>
+          <li class="nav-item"><a href="" class="nav-link">About</a></li>
+          <li class="nav-item"><a href="" class="nav-link">Contact Us</a></li>
+          <li class="nav-item"><a href="" class="nav-link">Login</a></li>
+        </ul>
       </nav>
+      <div class="banner">
+        <div class="banner-content">
+          <h1 class="banner-title">Brand New Group of Architects</h1>
+          <p class="banner-des">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even
+          </p>
+          <button class="btn-primary">Explore More</button>
+        </div>
+        <img class="banner-img" src="images/banner.png" alt="" />
+      </div>
     </header>
     <main></main>
 
