--- a/index.html
+++ b/index.html
@@ -30,7 +30,29 @@
         <img class="banner-img" src="images/banner.png" alt="" />
       </div>
     </header>
-    <main></main>
+    <main>
+      <section class="teams display-flex">
+        <div class="team-img-container">
+          <img src="images/team1.png" alt="" />
+          <img src="images/team2.png" alt="" />
+          <img src="images/team3.png" alt="" />
+          <img src="images/team4.png" alt="" />
+        </div>
+        <div class="our-features">
+          <h3 class="feature-title">
+            <span class="part-1 dark-03">Quick list</span>
+            <span class="part-2 dark-01">of Our</span>
+            <span class="part-3 primary-color">Features</span>
+          </h3>
+          <p class="feature-des dark-03">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even
+          </p>
+          <button class="btn-primary">Explore More</button>
+        </div>
+      </section>
+    </main>
 
     <footer></footer>
   </body>
