created some facts card

--- a/index.html
+++ b/index.html
@@ -52,6 +52,39 @@
           <button class="btn-primary">Explore More</button>
         </div>
       </section>
+      <!-- features will love n enjoy -->
+      <section></section>
+      <!-- some facts -->
+      <section class="some-facts">
+        <h3 class="feature-title">Some Facts</h3>
+        <p class="facts-des dark-03">
+          There are many variations of passages of Lorem Ipsum available, but
+          <br />
+          the majority have suffered alteration.
+        </p>
+        <div class="facts-card-container">
+          <div class="fact">
+            <img src="images/icons/ribon.png" alt="" class="fact-icon" />
+            <h4 class="fact-number dark-02">54</h4>
+            <h5 class="fact-name dark-03">Award Winnings</h5>
+          </div>
+          <div class="fact">
+            <img src="images/icons/projects.png" alt="" class="fact-icon" />
+            <h4 class="fact-number dark-02">1458</h4>
+            <h5 class="fact-name dark-03">Project Finished</h5>
+          </div>
+          <div class="fact">
+            <img src="images/icons/customers.png" alt="" class="fact-icon" />
+            <h4 class="fact-number dark-02">590</h4>
+            <h5 class="fact-name dark-03">Clients Worked</h5>
+          </div>
+          <div class="fact">
+            <img src="images/icons/email.png" alt="" class="fact-icon" />
+            <h4 class="fact-number dark-02">22578</h4>
+            <h5 class="fact-name dark-03">Email Send</h5>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer></footer>
